--- a/TestAssets/TestProjects/FSharpTestProjects/TestAppWithArgs/project.json
+++ b/TestAssets/TestProjects/FSharpTestProjects/TestAppWithArgs/project.json
@@ -8,9 +8,12 @@
         "Program.fs"
     ],
     "dependencies": {
-        "TestLibrary": "1.0.0-*",
-        "NETStandard.Library": "1.0.0-rc2-23901",
-        "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-151221"
+        "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-151221",
+        "NETStandard.Library": "1.0.0-rc2-23901"
+    },
+
+    "tools": {
+        "dotnet-compile-fsc": "1.0.0-*"
     },
 
     "frameworks": {
