--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "version": "1.0.0-*",
   "compilationOptions": {
     "keyFile": "../../tools/Key.snk",
@@ -8,6 +7,9 @@
   "dependencies": {
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-16537",
+    "NuGet.Versioning": "3.4.0-rtm-0763",
+    "NuGet.Packaging": "3.4.0-rtm-0763",
+    "NuGet.Frameworks": "3.4.0-rtm-0763",
     "NuGet.ProjectModel": "3.4.0-rtm-0763"
   },
   "frameworks": {
