--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -46,7 +46,7 @@
     "Microsoft.Extensions.Testing.Abstractions": "1.0.0-*",
     "Microsoft.NETCore.ConsoleHost": "1.0.0-rc2-23911",
     "Microsoft.NETCore.TestHost": "1.0.0-rc2-23911",
-    "NETStandard.Library": "1.5.0-rc2-23911",
+    "Microsoft.NETCore.App": "1.0.0-rc2-23911",
     "System.Reflection.Metadata": "1.3.0-rc2-23911",
     "System.Diagnostics.TextWriterTraceListener": "4.0.0-rc2-23911",
     "System.Diagnostics.TraceSource": "4.0.0-rc2-23911",
@@ -62,7 +62,7 @@
     "System.Net.NameResolution": "4.0.0-rc2-23911"
   },
   "frameworks": {
-    "netstandardapp1.5": {
+    "netstandard1.5": {
       "imports": [
         "dnxcore50",
         "portable-net45+win8"
