--- a/scripts/dotnet-cli-build/project.json
+++ b/scripts/dotnet-cli-build/project.json
@@ -8,7 +8,9 @@
     "NETStandard.Library": "1.5.0-rc2-23921",
     "Microsoft.DotNet.Cli.Build.Framework": "1.0.0-*",
     "WindowsAzure.Storage": "6.2.2-preview",
-    "System.Reflection.Metadata": "1.2.0"
+    "System.Reflection.Metadata": "1.3.0-rc2-23921",
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-23918",
+    "System.Xml.XmlSerializer": "4.0.11-rc2-23921"
   },
   "frameworks": {
     "netstandardapp1.5": {
