--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -53,6 +53,7 @@
     "System.Linq.Expressions": "4.0.11-rc2-23921",
     "System.Xml.XDocument": "4.0.11-rc2-23921",
     "System.Resources.ReaderWriter": "4.0.0-rc2-23921",
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-23921",
     "System.Net.Sockets": "4.1.0-rc2-23921",
     "System.Threading.ThreadPool": "4.0.10-rc2-23921",
     "Microsoft.Win32.Registry": {
