--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -54,6 +54,7 @@
     "System.Xml.XDocument": "4.0.11-rc2-23921",
     "System.Resources.ReaderWriter": "4.0.0-rc2-23921",
     "System.Runtime.Serialization.Primitives": "4.1.1-rc2-23921",
+    "System.Runtime.Serialization.Json": "4.0.2-rc2-23918",
     "System.Net.Sockets": "4.1.0-rc2-23921",
     "System.Threading.ThreadPool": "4.0.10-rc2-23921",
     "Microsoft.Win32.Registry": {
