--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -6,10 +6,10 @@
   },
   "dependencies": {
     "Microsoft.DotNet.ProjectModel": { "target": "project" },
-    "NuGet.Versioning": "3.5.0-beta",
-    "NuGet.Packaging": "3.5.0-beta",
-    "NuGet.Frameworks": "3.5.0-beta",
-    "NuGet.ProjectModel": "3.5.0-beta"
+    "NuGet.Versioning": "3.5.0-rc-804",
+    "NuGet.Packaging": "3.5.0-rc-804",
+    "NuGet.Frameworks": "3.5.0-rc-804",
+    "NuGet.ProjectModel": "3.5.0-rc-804"
   },
   "frameworks": {
     "net451": {
