--- a/TestAssets/TestProjects/EndToEndTestApp/project.json
+++ b/TestAssets/TestProjects/EndToEndTestApp/project.json
@@ -14,7 +14,10 @@
     }
   },
   "dependencies": {
-    "Microsoft.NETCore.App": "1.0.0-rc2-*"
+    "Microsoft.NETCore.App": {
+        "version": "1.0.0-rc2-*",
+        "type": "platform"
+    }
   },
   "packOptions": {
     "files": {
