--- a/TestAssets/TestProjects/TestAppCompilationContext/TestApp/project.json
+++ b/TestAssets/TestProjects/TestAppCompilationContext/TestApp/project.json
@@ -6,7 +6,10 @@
   },
   "dependencies": {
     "TestLibrary": "1.0.0-*",
-    "Microsoft.NETCore.App": "1.0.0-rc2-*"
+    "Microsoft.NETCore.App": {
+      "version": "1.0.0-rc2-*",
+      "type": "platform"
+    }
   },
   "frameworks": {
     "netcoreapp1.0": { }
