--- a/TestAssets/TestProjects/TestAppWithContentPackage/project.json
+++ b/TestAssets/TestProjects/TestAppWithContentPackage/project.json
@@ -5,7 +5,10 @@
     "outputName": "AppWithContentPackage"
   },
   "dependencies": {
-    "Microsoft.NETCore.App": "1.0.0-rc2-*",
+    "Microsoft.NETCore.App": {
+        "version": "1.0.0-rc2-*",
+        "type": "platform"
+    },
     "SharedContentA": "1.0.0-*"
   },
   "frameworks": {
