--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -1,11 +1,11 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-preview1-*",
   "compilationOptions": {
     "keyFile": "../../tools/Key.snk",
     "warningsAsErrors": true
   },
   "dependencies": {
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
+    "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
     "NuGet.Versioning": "3.5.0-beta",
     "NuGet.Packaging": "3.5.0-beta",
     "NuGet.Frameworks": "3.5.0-beta",
