--- a/src/Microsoft.DotNet.InternalAbstractions/project.json
+++ b/src/Microsoft.DotNet.InternalAbstractions/project.json
@@ -1,6 +1,6 @@
 {
   "description": "Abstractions for making code that uses file system and environment testable.",
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc2-*",
   "repository": {
     "type": "git",
     "url": "git://github.com/dotnet/cli"
