--- a/tools/MultiProjectValidator/project.json
+++ b/tools/MultiProjectValidator/project.json
@@ -6,8 +6,8 @@
   },
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-*"
+    "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
+    "Microsoft.DotNet.Cli.Utils": "1.0.0-rc2-preview1-*"
   },
   "frameworks": {
     "netstandardapp1.5": {
