--- a/tools/RuntimeGraphGenerator/project.json
+++ b/tools/RuntimeGraphGenerator/project.json
@@ -8,8 +8,8 @@
     "NuGet.Versioning": "3.5.0-beta",
     "System.CommandLine": "0.1.0-e160119-1",
     "System.Runtime.Serialization.Json": "4.0.2-rc2-24027",
-    "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
+    "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
+    "Microsoft.DotNet.Cli.Utils": "1.0.0-rc2-preview1-*",
     "Microsoft.NETCore.ConsoleHost": "1.0.0-rc2-24027",
     "NETStandard.Library": "1.5.0-rc2-24027"
   },
