--- a/TestAssets/TestPackages/dotnet-dependency-tool-invoker/project.json
+++ b/TestAssets/TestPackages/dotnet-dependency-tool-invoker/project.json
@@ -12,9 +12,9 @@
       "type": "platform",
       "version": "1.0.0-rc2-*"
     },
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-rc2-preview1-*",
+    "Microsoft.DotNet.Cli.Utils": "1.0.0-preview1-*",
     "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
-    "Microsoft.DotNet.Compiler.Common": "1.0.0-rc2-preview1-*"
+    "Microsoft.DotNet.Compiler.Common": "1.0.0-preview1-*"
   },
   "frameworks": {
     "netcoreapp1.0": {
