--- a/src/Microsoft.DotNet.TestFramework/project.json
+++ b/src/Microsoft.DotNet.TestFramework/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-preview1-*",
+  "version": "1.0.0-preview1-*",
   "description": "Microsoft.DotNet.TestFramework Class Library",
   "tags": [
     ""
@@ -10,7 +10,7 @@
   "projectUrl": "",
   "licenseUrl": "",
   "dependencies": {
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-rc2-preview1-*"
+    "Microsoft.DotNet.Cli.Utils": "1.0.0-preview1-*"
   },
   "frameworks": {
     "netstandard1.5": {
