--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
-    "Microsoft.DotNet.Compiler.Common": "1.0.0-rc2-*",
+    "Microsoft.DotNet.Compiler.Common": "1.0.0-preview1-*",
     "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.3.0-beta1-20160429-01"
   },
   "frameworks": {
